# galileo

./: CMakeLists.txt  LICENSE  index.md  license.rtf  project.spec.in  template.wxs.in  windeploy.py
Qt/: CMakeLists.txt  README.md
Qt/gui/: CMakeLists.txt  Galileo.qrc  about.cpp  about.h  about.ui  mainwindow.cpp  mainwindow.h
Qt/sightlines/: CMakeLists.txt  sightlines.c  sightlines.h
Qt/src/: about.cpp  about.h  about.ui  mainwindow.ui
Qt/tests/: sightlines_btest.cpp  sightlines_gtest.cpp
src/: about.ui  mainwindow.cpp  mainwindow.h
